Bitcoin ticket added

--- a/index.html
+++ b/index.html
@@ -3,5 +3,11 @@
 	<body>
 		<span>Stored here for safe keeping.</span>
 		<img src="http://ei.marketwatch.com/Multimedia/2013/09/25/Photos/MG/MW-BL902_bitcoi_20130925184744_MG.jpg />
+
+<h2>Adding in the Bitcoin Ticker</h2>
+
+<div id="btc-quote"></div>
+<script type="text/javascript" src="//cdn-gh.firebase.com/btcquote/embed.js"></script>
+          
 	</body>
 </html>
